--- a/home.html
+++ b/home.html
@@ -63,7 +63,7 @@
 							</div>
 
 							<div class="appContainer">
-								<img src="'https://icon-library.com/images/calendar-icon-ios/calendar-icon-ios-8.jpg'https://icon-library.com/images/calendar-icon-ios/calendar-icon-ios-8.jpg" class="app">
+								<img src="https://icon-library.com/images/calendar-icon-ios/calendar-icon-ios-8.jpg" class="app">
 
 								<p>Photos</p>
 							</div>
