--- a/home.html
+++ b/home.html
@@ -87,7 +87,7 @@
 							</div>
 
 							<div class="appContainer">
-								<img src="https://th.bing.com/th/id/R.2e9a93b94a825f0d8da71230b8ef9453?rik=4VQyppdT3GlCwQ&riu=http%3a%2f%2f3.bp.blogspot.com%2f_GBwb-MzTAVw%2fTIvxdiozNcI%2fAAAAAAAAADo%2fPQQEVfnsSqU%2fs1600%2fNotes.png&ehk=n1or2Psl3AJEwvlTC5wfvaqdqnEy2e4X3Ds5EmYrmSc%3d&risl=&pid=ImgRaw&r=0" class="app">
+								<img src="" class="app">
 
 								<p>Maps</p>
 							</div>
@@ -111,7 +111,7 @@
 							</div>
 
 							<div class="appContainer"><a href="./calculator.html">
-								<img src="Images/Apps/11.png" class="app"></a>
+								<img src="https://th.bing.com/th/id/R.2e9a93b94a825f0d8da71230b8ef9453?rik=4VQyppdT3GlCwQ&riu=http%3a%2f%2f3.bp.blogspot.com%2f_GBwb-MzTAVw%2fTIvxdiozNcI%2fAAAAAAAAADo%2fPQQEVfnsSqU%2fs1600%2fNotes.png&ehk=n1or2Psl3AJEwvlTC5wfvaqdqnEy2e4X3Ds5EmYrmSc%3d&risl=&pid=ImgRaw&r=0" class="app"></a>
 
 								<p>Calculator</p>
 							</div>
