--- a/home.html
+++ b/home.html
@@ -57,13 +57,13 @@
 							</div>
 
 							<div class="appContainer">
-								<img src="Images/Apps/2.png" class="app">
+								<img src="https://icon-library.com/images/calendar-icon-ios/calendar-icon-ios-8.jpg" class="app">
 
 								<p>Calendar</p>
 							</div>
 
 							<div class="appContainer">
-								<img src="https://icon-library.com/images/calendar-icon-ios/calendar-icon-ios-8.jpg" class="app">
+								<img src="" class="app">
 
 								<p>Photos</p>
 							</div>
@@ -105,13 +105,13 @@
 							</div>
 
 							<div class="appContainer">
-								<img src="Images/Apps/10.png" class="app">
+								<img src="https://th.bing.com/th/id/R.2e9a93b94a825f0d8da71230b8ef9453?rik=4VQyppdT3GlCwQ&riu=http%3a%2f%2f3.bp.blogspot.com%2f_GBwb-MzTAVw%2fTIvxdiozNcI%2fAAAAAAAAADo%2fPQQEVfnsSqU%2fs1600%2fNotes.png&ehk=n1or2Psl3AJEwvlTC5wfvaqdqnEy2e4X3Ds5EmYrmSc%3d&risl=&pid=ImgRaw&r=0" class="app">
 
 								<p>Notes</p>
 							</div>
 
 							<div class="appContainer"><a href="./calculator.html">
-								<img src="https://th.bing.com/th/id/R.2e9a93b94a825f0d8da71230b8ef9453?rik=4VQyppdT3GlCwQ&riu=http%3a%2f%2f3.bp.blogspot.com%2f_GBwb-MzTAVw%2fTIvxdiozNcI%2fAAAAAAAAADo%2fPQQEVfnsSqU%2fs1600%2fNotes.png&ehk=n1or2Psl3AJEwvlTC5wfvaqdqnEy2e4X3Ds5EmYrmSc%3d&risl=&pid=ImgRaw&r=0" class="app"></a>
+								<img src="" class="app"></a>
 
 								<p>Calculator</p>
 							</div>
