--- a/home.html
+++ b/home.html
@@ -93,7 +93,7 @@
 							</div>
 
 							<div class="appContainer">
-								<img src="Images/Apps/8.png" class="app">
+								<img src="https://www.transparentpng.com/thumb/weather-report/iphone-weather-icon-png-30.png" class="app">
 
 								<p>Weather</p>
 							</div>
