--- a/home.html
+++ b/home.html
@@ -81,7 +81,7 @@
 							</div>
 
 							<div class="appContainer">
-								<img src="https://static.wikia.nocookie.net/logopedia/images/7/7d/IPhone-Clock-icon.jpg/revision/latest?cb=20130611000849" class="app">
+								<img src="https://icon-library.com/images/ios-clock-icon/ios-clock-icon-0.jpg" class="app">
 
 								<p>Clock</p>
 							</div>
