--- a/home.html
+++ b/home.html
@@ -181,7 +181,7 @@
 						</div>
 
 						<div class="dock">
-							<img src="Images/Apps/phone.png" class="app">
+							<img src="https://img00.deviantart.net/fef1/i/2012/320/8/1/contacts_icon_replacement_from_ios_by_flakshack-d5l677g.png" class="app">
 
 							<img src="Images/Apps/safari.png" class="app">
 
