--- a/home.html
+++ b/home.html
@@ -111,7 +111,7 @@
 							</div>
 
 							<div class="appContainer"><a href="./calculator.html">
-								<img src="" class="app"></a>
+								<img src="https://icon-library.com/images/calculator-icon-ico/calculator-icon-ico-24.jpg" class="app"></a>
 
 								<p>Calculator</p>
 							</div>
