--- a/home.html
+++ b/home.html
@@ -165,7 +165,7 @@
 							</div>
 
 							<div class="appContainer">
-								<img src="Images/Apps/20.png" class="app">
+								<img src="https://icon-library.com/images/ios-6-settings-icon/ios-6-settings-icon-8.jpg" class="app">
 
 								<p>Settings</p>
 							</div>
