--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
 						</a>
 					</div>
 
-					<p class="swipe" id="swipe">Swipe up to unlock</p>
+					<p class="swipe" id="swipe"></p>
 
 					<a href="./passcode.html">
 						<div class="home"></div>
@@ -85,7 +85,7 @@
 
 				<div class="side power" onclick="turnOff()"></div>
 
-				<div class="dash right bottom"></div>
+				<div class="dash right bot"></div>
 			</div>
 		</div>
 
