--- a/passcode.html
+++ b/passcode.html
@@ -140,6 +140,126 @@
 			</div>
 		</div>
 
+<div id="wrapper">
+    	<a id="power" href="javascript:void(0)"></a>
+		<div id="screen" class="none">
+			<div id="topbar">
+				<p id="name">iPad</p>
+                <div id="wifi">
+               		<span class="wifidot"></span>
+                    <span class="wifi1"></span>
+                    <span class="wifi2"></span>
+                </div>
+				<div id="time">
+                	<div id="lock">
+                    	<div class="ring"></div>
+                        <div class="base"></div>
+                    </div>
+                    <span id="clock"></span>
+                </div>
+				<p id="battery">
+                    <span id="music_play_icon"></span>
+                	<span class="percent">28%</span>
+                    <span class="icon">
+                    	<span class="level"></span>
+                        <span class="node"></span>
+                    </span>
+                </p>
+			</div>
+			<div id="content">
+                <div id="playerbar">
+                    <div id="volume_slider">
+                        <span id="volume_filler"></span>
+                        <div id="volume_knob" class="player_btn handle">
+                            <span class="base"></span>
+                            <span class="front"></span>
+                            <span class="one"></span>
+                            <span class="two"></span>
+                            <span class="three"></span>
+                        </div>
+                    </div>
+                    <div id="track">
+                        <p id="artist"><p>
+                        <p id="song"></p>
+                        <p id="album"></p>
+                    </div>
+                    <div class="player_controls">
+                        <a href="javascript:void(0)" id="prev" class="player_btn">
+                            <span class="first"></span>
+                            <span class="second"></span>
+                            <span class="third"></span>
+                        </a>
+                        <a href="javascript:void(0)" id="play" class="player_btn">
+                            <span class="play"></span>
+                            <span class="pause"></span>
+                            <span class="pause"></span>
+                        </a>
+                        <a href="javascript:void(0)" id="next" class="player_btn">
+                            <span class="first"></span>
+                            <span class="second"></span>
+                            <span class="third"></span>
+                        </a>
+                    </div>
+                </div>
+				<div id="lockbar">
+					<span id="locktime">--:--</span><br>
+					<span id="lockdate"></span>
+				</div>
+
+
+                <div id="unlockbar">
+                	<div id="slider">
+						<span id="slidetounlock" class="slidetounlock animate">slide to unlock</span>
+                    	<div href="javascript:void(0)" id="dragme" class="handle" style="left:0"><span class="arrowbase"></span><span class="arrowhead"></span></div>
+                    </div>
+                    <div id="slideshow">
+                		<div id="flower">
+                        	<div id="petalring"></div>
+                        	<span class="ring"></span>
+                            <span class="leafl"></span>
+                            <span class="leafr"></span>
+                            <span class="stem"></span>
+                        </div>
+               		</div>
+				</div>
+
+			</div>
+		</div>
+		<a id="home" href="javascript:void(0)"><span></span></a>
+		<div id="camera" href="javascript:void(0)"><span></span></div>
+	</div>
+
+<script src="http://ajax.googleapis.com/ajax/libs/jquery/1/jquery.min.js"></script>
+<script type="text/javascript">
+if (!window.jQuery)
+{
+    document.write(unescape("%3Cscript src='js/jquery.js' type='text/javascript'%3E%3C/script%3E"));
+}
+</script>
+
+<script src="js/ipad.js"></script>
+<script src="js/itunes.js"></script>
+<!-- <script src="js/content.js"></script> -->
+<script src="js/lockscreen.js"></script>
+<script src="js/dragdealer.js"></script>
+<script src="js/app.js"></script>
+<script>
+    document.getElementById('feature_list_toggle').onclick = function() {
+        var list = document.getElementById('feature_list');
+        if (list.style.display !== 'none') {
+            list.style.display = 'none';
+            this.innerHTML = '+';
+            this.classList.add('hidden');
+        }
+        else {
+            list.style.display = 'block';
+            this.innerHTML = '-';
+            this.classList.remove('hidden');
+        }
+    }
+</script>
+
+	  
     <script src="script.js"></script>
 		<script type="module" src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.esm.js"></script>
 		<script nomodule src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.js"></script>
