--- a/passcode.html
+++ b/passcode.html
@@ -225,7 +225,7 @@
 
 			</div>
 		</div>
-		<a id="home" href="javascript:void(0)"><span></span></a>
+		<a id="home" href="home.html"><span></span></a>
 		<div id="camera" href="javascript:void(0)"><span></span></div>
 	</div>
 
