--- a/home.html
+++ b/home.html
@@ -63,7 +63,7 @@
 							</div>
 
 							<div class="appContainer">
-								<img src="" class="app">
+								<img src="Photos.png" class="app">
 
 								<p>Photos</p>
 							</div>
