--- a/home.html
+++ b/home.html
@@ -87,7 +87,7 @@
 							</div>
 
 							<div class="appContainer">
-								<img src="" class="app">
+								<img src="Maps.png" class="app">
 
 								<p>Maps</p>
 							</div>
@@ -181,13 +181,13 @@
 						</div>
 
 						<div class="dock">
-							<img src="https://img00.deviantart.net/fef1/i/2012/320/8/1/contacts_icon_replacement_from_ios_by_flakshack-d5l677g.png" class="app">
+							<img src="Phone.png" class="app">
 
-							<img src="Images/Apps/safari.png" class="app">
+							<img src="Safari.png" class="app">
 
-							<img src="Images/Apps/iMessage.png" class="app">
+							<img src="Messages.png" class="app">
 
-							<img src="Images/Apps/music.png" class="app">
+							<img src="iTunes.png" class="app">
 						</div>
 					</div>
 
