--- a/home.html
+++ b/home.html
@@ -75,7 +75,7 @@
 							</div>
 
 							<div class="appContainer">
-								<img src="Images/Apps/5.png" class="app">
+								<img src="Mail.png" class="app">
 
 								<p>Mail</p>
 							</div>
