--- a/home.html
+++ b/home.html
@@ -128,8 +128,8 @@
 								<p>Books</p>
 							</div>
 
-							<div class="appContainer"><a href="appstore.html">
-								<img src="https://th.bing.com/th/id/R.8be014122b2e0fa944fd8b4d8c0c580b?rik=IToa2YslIl4HGg&riu=http%3a%2f%2fwww.newdesignfile.com%2fpostpic%2f2009%2f05%2fdownload-app-store-icon_184210.png&ehk=AcN6Tk379jgdLIgoepdGvHZW57lnxrV4iTbGrbaVNsk%3d&risl=&pid=ImgRaw&r=0" class="app">
+							<div class="appContainer">
+								<img src="App Store.png" class="app">
 
 								<p>App Store</p>
 							</div>
@@ -165,7 +165,7 @@
 							</div>
 
 							<div class="appContainer">
-								<img src="https://icon-library.com/images/ios-6-settings-icon/ios-6-settings-icon-8.jpg" class="app">
+								<img src="Settings.png" class="app">
 
 								<p>Settings</p>
 							</div>
