--- a/home.html
+++ b/home.html
@@ -51,7 +51,7 @@
 					<div class="content">
 						<div class="icons">
 							<div class="appContainer">
-								<img src="Images/Apps/1.png" class="app">
+								<img src="FaceTime.png" class="app">
 
 								<p>FaceTime</p>
 							</div>
@@ -69,7 +69,7 @@
 							</div>
 
 							<div class="appContainer"><a href="/backcamera.html">
-								<img src="https://cdn.icon-icons.com/icons2/41/PNG/128/iphonecamera_6708.png" class="app"></a>
+								<img src="Camera.png" class="app"></a>
 
 								<p>Camera</p>
 							</div>
@@ -81,7 +81,7 @@
 							</div>
 
 							<div class="appContainer">
-								<img src="https://icon-library.com/images/ios-clock-icon/ios-clock-icon-0.jpg" class="app">
+								<img src="Clock.png" class="app">
 
 								<p>Clock</p>
 							</div>
@@ -93,7 +93,7 @@
 							</div>
 
 							<div class="appContainer">
-								<img src="https://www.transparentpng.com/thumb/weather-report/iphone-weather-icon-png-30.png" class="app">
+								<img src="Weather.png" class="app">
 
 								<p>Weather</p>
 							</div>
@@ -153,7 +153,7 @@
 							</div>
 
 							<div class="appContainer">
-								<img src="Images/Apps/18.png" class="app">
+								<img src="Stocks.png" class="app">
 
 								<p>Stocks</p>
 							</div>
