--- a/home.html
+++ b/home.html
@@ -57,7 +57,7 @@
 							</div>
 
 							<div class="appContainer">
-								<img src="https://icon-library.com/images/calendar-icon-ios/calendar-icon-ios-8.jpg" class="app">
+								<img src="Calendar.png" class="app">
 
 								<p>Calendar</p>
 							</div>
@@ -105,21 +105,21 @@
 							</div>
 
 							<div class="appContainer">
-								<img src="https://th.bing.com/th/id/R.2e9a93b94a825f0d8da71230b8ef9453?rik=4VQyppdT3GlCwQ&riu=http%3a%2f%2f3.bp.blogspot.com%2f_GBwb-MzTAVw%2fTIvxdiozNcI%2fAAAAAAAAADo%2fPQQEVfnsSqU%2fs1600%2fNotes.png&ehk=n1or2Psl3AJEwvlTC5wfvaqdqnEy2e4X3Ds5EmYrmSc%3d&risl=&pid=ImgRaw&r=0" class="app">
+								<img src="Notes.png" class="app">
 
 								<p>Notes</p>
 							</div>
 
 							<div class="appContainer"><a href="./calculator.html">
-								<img src="https://icon-library.com/images/calculator-icon-ico/calculator-icon-ico-24.jpg" class="app"></a>
+								<img src="Calculator.png" class="app"></a>
 
 								<p>Calculator</p>
 							</div>
 
 							<div class="appContainer">
-								<img src="Images/Apps/12.png" class="app">
+								<img src="Compass.png" class="app">
 
-								<p>News</p>
+								<p>Compass</p>
 							</div>
 
 							<div class="appContainer">
@@ -135,7 +135,7 @@
 							</div>
 
 							<div class="appContainer">
-								<img src="Images/Apps/15.png" class="app">
+								<img src="Chat.png" class="app">
 
 								<p>Podcasts</p>
 							</div>
@@ -143,13 +143,13 @@
 							<div class="appContainer">
 								<img src="Images/Apps/16.png" class="app">
 
-								<p>TV</p>
+								<p></p>
 							</div>
 
 							<div class="appContainer">
-								<img src="Images/Apps/17.png" class="app">
+								<img src="Videos.png" class="app">
 
-								<p>Health</p>
+								<p>Videos</p>
 							</div>
 
 							<div class="appContainer">
@@ -159,9 +159,9 @@
 							</div>
 
 							<div class="appContainer">
-								<img src="Images/Apps/19.png" class="app">
+								<img src="YouTube.png" class="app">
 
-								<p>Wallet</p>
+								<p>YouTube</p>
 							</div>
 
 							<div class="appContainer">
