--- a/home.html
+++ b/home.html
@@ -7,41 +7,7 @@
     <link href="style.css" rel="stylesheet" type="text/css">
   </head>
   <body>
-		 <link rel="stylesheet" href="iphone.css" />
- <script>
-  function start(){
-	  var a = document.getElementById('screen').style.backgroundColor;
-	  if (a == 'white'){
-		  document.getElementById('screen').style.backgroundColor = 'black';
-		  document.getElementById('screenshadow').style.display = 'block';
-	  } else{
-	  document.getElementById('screen').style.backgroundColor = 'white';
-	  document.getElementById('screenshadow').style.display = 'none';
-	  }
-  }
- </script>
-
- <div id="z-index-container" draggable="false">
-  <div class="big-base"><!-- Корпус -->
-	<div class="glass"></div><!-- Стекло -->
-    <div id="screenshadow"></div><!-- Блик стекла -->
-  </div>
-  <div class="volume-up"></div><!-- Звук+ -->
-  <div class="volume-down"></div><!-- Звук- -->
-  <div class="volume-onoff"></div><!-- Звук вкл/выкл -->
-  <div class="power-button"></div><!-- Кнопка включения -->
-  <div class="home-button" onclick="start()"><!-- Кнопка Домой -->
-   <div class="home-button-gr"></div><!-- Гравировка на кнопке -->
-  </div>
-  <div class="iSight">
-	  <div class="inisight"></div><!-- Глазок -->
-  </div><!-- Камера -->
-  <div class="speaker"><!-- Динамик -->
-	  <div class="speaker-border"></div><!-- Граница вокруг динамика-->
-  </div> 
-  <div id="screen" iframe="home.html"></div><!-- Экран -->
- </div>
-		<div class="main">
+	  <div class="main">
 			<div class="side left">
 				<div class="dash left top"></div>
 
@@ -238,7 +204,183 @@
 				<div class="dash right bottom"></div>
 			</div>
 		</div>
+		 <link rel="stylesheet" href="iphone.css" />
+ <script>
+  function start(){
+	  var a = document.getElementById('screen').style.backgroundColor;
+	  if (a == 'white'){
+		  document.getElementById('screen').style.backgroundColor = 'black';
+		  document.getElementById('screenshadow').style.display = 'block';
+	  } else{
+	  document.getElementById('screen').style.backgroundColor = 'white';
+	  document.getElementById('screenshadow').style.display = 'none';
+	  }
+  }
+ </script>
 
+					<div class="content">
+						<div class="icons">
+							<div class="appContainer">
+								<img src="FaceTime.png" class="app">
+
+								<p>FaceTime</p>
+							</div>
+
+							<div class="appContainer">
+								<img src="Calendar.png" class="app">
+
+								<p>Calendar</p>
+							</div>
+
+							<div class="appContainer">
+								<img src="Photos.png" class="app">
+
+								<p>Photos</p>
+							</div>
+
+							<div class="appContainer"><a href="/backcamera.html">
+								<img src="Camera.png" class="app"></a>
+
+								<p>Camera</p>
+							</div>
+
+							<div class="appContainer">
+								<img src="Mail.png" class="app">
+
+								<p>Mail</p>
+							</div>
+
+							<div class="appContainer">
+								<img src="Clock.png" class="app">
+
+								<p>Clock</p>
+							</div>
+
+							<div class="appContainer">
+								<img src="Maps.png" class="app">
+
+								<p>Maps</p>
+							</div>
+
+							<div class="appContainer">
+								<img src="Weather.png" class="app">
+
+								<p>Weather</p>
+							</div>
+
+							<div class="appContainer">
+								<img src="Images/Apps/9.png" class="app">
+
+								<p>Reminders</p>
+							</div>
+
+							<div class="appContainer">
+								<img src="Notes.png" class="app">
+
+								<p>Notes</p>
+							</div>
+
+							<div class="appContainer"><a href="./calculator.html">
+								<img src="Calculator.png" class="app"></a>
+
+								<p>Calculator</p>
+							</div>
+
+							<div class="appContainer">
+								<img src="Compass.png" class="app">
+
+								<p>Compass</p>
+							</div>
+
+							<div class="appContainer">
+								<img src="Images/Apps/13.png" class="app">
+
+								<p>Books</p>
+							</div>
+
+							<div class="appContainer">
+								<img src="App Store.png" class="app">
+
+								<p>App Store</p>
+							</div>
+
+							<div class="appContainer">
+								<img src="Chat.png" class="app">
+
+								<p>Podcasts</p>
+							</div>
+
+							<div class="appContainer">
+								<img src="Images/Apps/16.png" class="app">
+
+								<p></p>
+							</div>
+
+							<div class="appContainer">
+								<img src="Videos.png" class="app">
+
+								<p>Videos</p>
+							</div>
+
+							<div class="appContainer">
+								<img src="Stocks.png" class="app">
+
+								<p>Stocks</p>
+							</div>
+
+							<div class="appContainer">
+								<img src="YouTube.png" class="app">
+
+								<p>YouTube</p>
+							</div>
+
+							<div class="appContainer">
+								<img src="Settings.png" class="app">
+
+								<p>Settings</p>
+							</div>
+
+						</div>
+
+						<div class="dots">
+							<div class="dot"></div>
+
+							<div class="dot active"></div>
+
+							<div class="dot"></div>
+						</div>
+
+						<div class="dock">
+							<img src="Phone.png" class="app">
+
+							<img src="Safari.png" class="app">
+
+							<img src="Messages.png" class="app">
+
+							<img src="iTunes.png" class="app">
+						</div>
+					</div>
+
+ <div id="z-index-container" draggable="false">
+  <div class="big-base"><!-- Корпус -->
+	<div class="glass" cantainer=""></div><!-- Стекло -->
+    <div id="screenshadow"></div><!-- Блик стекла -->
+  </div>
+  <div class="volume-up"></div><!-- Звук+ -->
+  <div class="volume-down"></div><!-- Звук- -->
+  <div class="volume-onoff"></div><!-- Звук вкл/выкл -->
+  <div class="power-button"></div><!-- Кнопка включения -->
+  <div class="home-button" onclick="start()"><!-- Кнопка Домой -->
+   <div class="home-button-gr"></div><!-- Гравировка на кнопке -->
+  </div>
+  <div class="iSight">
+	  <div class="inisight"></div><!-- Глазок -->
+  </div><!-- Камера -->
+  <div class="speaker"><!-- Динамик -->
+	  <div class="speaker-border"></div><!-- Граница вокруг динамика-->
+  </div> 
+  <div id="screen" iframe="home.html"></div><!-- Экран -->
+ </div>
     <script src="script.js"></script>
 		<script type="module" src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.esm.js"></script>
 		<script nomodule src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.js"></script>
