--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
 
 					<p class="swipe" id="swipe"></p>
 
-					<a href="./passcode.html">
+					<a href="./home.html">
 						<div class="home"></div>
 					</a>
 
