--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
 							<img src="Images/Icons/torch.png" id="torchImg">
 						</button>
 						
-						<a href="./backcamera.html">
+						<a href="home.html">
 							<button class="camera" id="cameraBtn">
 								<img src="Images/Icons/camera.png" id="cameraImg">
 							</button>
